# zeus

./: .gitignore
.github/workflows/: build.yaml
cli/: Cargo.toml
cli/shared/: Cargo.toml
cli/shared/src/: lib.rs  utils.rs
cli/shared/src/models/: mod.rs  package.rs  package_manager.rs  package_manager_repository.rs
cli/shared/src/package_managers/: apt.rs  choco.rs  default.rs  default_command_only.rs  default_flag_only.rs  mod.rs  pacman.rs  pm.rs  rpm.rs  scoop.rs
cli/shared/src/scripts/: apt.sh  choco.bat  rpm.sh
cli/zeus/: Cargo.toml
cli/zeus/src/: main.rs
cli/zeusd/: Cargo.toml
cli/zeusd/src/: main.rs
deployments/: docker-compose.yml
server/: .dockerignore  .gitignore  Dockerfile  LICENSE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
server/backend/admin/: Dockerfile  config.yaml  package.json
server/backend/admin/src/: index.ts  middleware.ts  routes.ts
server/backend/dashboard/: Dockerfile  package.json  tsconfig.json
server/backend/dashboard/src/: index.ts  middleware.ts  routes.ts
server/backend/doorman/: Dockerfile  nginx.conf  package.json  setup.sh
server/backend/doorman/src/: index.ts
server/shared/auth/: package.json
server/shared/cache/: package.json
server/shared/config/: package.json  tsconfig.json
server/shared/constants/: index.ts
server/shared/database/: config.json  package.json  tsconfig.json
server/shared/expressapp/: package.json
server/shared/input-validator/: package.json
server/shared/notfoundmiddleware/: package.json
server/shared/notifications/: package.json
server/shared/pub-sub/: package.json  tsconfig.json
server/shared/queue/: package.json
server/shared/storage/: package.json
(+39 files in other folders)
