[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = "4.4.11"
mac_address = "1.1.5"
reqwest = { version = "0.11.22", features = ["json"] }
seahorse = "2.2.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
sha256 = "1.4.0"
smol = "1.3.0"
hex = { version = "0.4", default-features = false }
dirs = "5.0.1"
