[package]
name = "zeus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
seahorse = "2.1.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
sha256 = "1.4.0"
sysinfo = "0.29.10"
tokio = { version = "1.34.0", features = ["full"] }
shared = { path = "../shared/" }
smol = "1.3.0"
uuid = { version = "1.6.1", features = ["fast-rng", "v4"] }
rand = "0.8.5"
