[package]
name = "zeusd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-cron-scheduler = "1.0.0"
chrono = "0.4.31"
cron-job = "0.1.4"
reqwest = "0.11.22"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
sha256 = "1.4.0"
shared = { path = "../shared/" }
smol = "1.3.0"
tokio = { version = "1.34.0", features = ["full"] }
